fix pre code overflow problem

--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -18,6 +18,7 @@
     background-color: #808080;
 }
 
+
 /* --selection-- */
 
 *::selection {
@@ -37,4 +38,12 @@
 
 a {
     text-decoration: none;
+}
+
+pre {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
